--- a/src/bukkit/bukkit-plugin/pom.xml
+++ b/src/bukkit/bukkit-plugin/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
     <artifactId>bukkit</artifactId>
-    <version>2.2.79-SNAPSHOT</version>
+    <version>DEV-SNAPSHOT</version>
   </parent>
 
   <artifactId>bukkit-plugin</artifactId>
