--- a/src/patch-place-break/patch-place-break-storage/pom.xml
+++ b/src/patch-place-break/patch-place-break-storage/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
     <artifactId>mc-jobs-reborn-patch-place-break</artifactId>
-    <version>2.2.79-SNAPSHOT</version>
+    <version>DEV-SNAPSHOT</version>
     <relativePath>../../../pom.xml</relativePath>
   </parent>
 
