dispatch Maven CD workflow at release branch creation time

--- a/.github/workflows/maven-cd.yml
+++ b/.github/workflows/maven-cd.yml
@@ -18,6 +18,7 @@ on:
       - '**/pom.xml'
       - '.github/workflows/*'
       - 'src/**'
+  create:
 
 permissions:
   contents: write
@@ -64,6 +65,7 @@ jobs:
   #   and build tools (e.g. JavaScript/TypeScript, Java with Gradle, ...)
   cd:
     name: CD
+    if: ${{ contains(github.ref, 'refs/heads/release/v') }}
     runs-on: ubuntu-latest
 
     steps:
