--- a/.github/workflows/maven-cd.yml
+++ b/.github/workflows/maven-cd.yml
@@ -89,27 +89,31 @@ jobs:
 
       - name: Retrieve current patchless release
         run: |
-          echo "CURRENT_PATCHLESS_VERSION=$(
+          echo "CURRENT_PATCHLESS_VERSION=\"$(
             git branch --show-current |
             sed 's_^release/v__'
-            )" >> $GITHUB_ENV
+            )\"" >> $GITHUB_ENV
 
       - name: Retrieve latest available release
         run: |
-          echo "LATEST_PATCH_VERSION=$(
+          echo "LATEST_PATCH_VERSION=\"$(
             git tag -l "v${CURRENT_PATCHLESS_VERSION}.*" |
             sort --version-sort -r |
             head -n1 |
             sed 's_v__'
-            )" >> $GITHUB_ENV
+            )\"" >> $GITHUB_ENV
 
       # Bump patch version part
       - name: Compute new release
         run: |
-          echo "NEW_RELEASE=$(
-            echo \"${LATEST_PATCH_VERSION}\" |
-            awk -v FS=. -v OFS=. '{$(NF)++; print}'
-            )" >> $GITHUB_ENV
+          if [[ -n ${LATEST_PATCH_VERSION} ]]; then
+            echo "NEW_RELEASE=\"$(
+              echo \"${LATEST_PATCH_VERSION}\" |
+              awk -v FS=. -v OFS=. '{$(NF)++; print}'
+              )\"" >> $GITHUB_ENV
+          else
+            echo "NEW_RELEASE=\"${CURRENT_PATCHLESS_VERSION}.0\"" >> $GITHUB_ENV
+          fi
 
       # A Git branch is temporary required at commit time so that it can be replaced by a tag later on.
       # The versions-maven-plugin is a convenient solution for setting up the new version.
@@ -117,10 +121,10 @@ jobs:
         run: |
           TMP_BRANCH_NAME="github-actions/auto-release-${GITHUB_RUN_ID}-${GITHUB_RUN_ATTEMPT}"
           git checkout -b "${TMP_BRANCH_NAME}"
-          mvn -B versions:set -DnewVersion="${NEW_RELEASE}" -DgenerateBackupPoms=false
+          mvn -B -ntp -ff -V -e versions:set -DnewVersion="${NEW_RELEASE}" -DgenerateBackupPoms=false
           git add .
           git commit -m "[ci skip] release v${NEW_RELEASE}"
           git tag "v${NEW_RELEASE}"
           git checkout "${GITHUB_REF}"
-          git branch -d "${TMP_BRANCH_NAME}"
+          git branch -D "${TMP_BRANCH_NAME}"
           git push --tags
