restrict back permissions to only write access for contents

--- a/.github/workflows/maven-cd.yml
+++ b/.github/workflows/maven-cd.yml
@@ -20,7 +20,8 @@ on:
       - 'src/**'
   create:
 
-permissions: write-all # Required when creating protected tag
+permissions:
+  contents: write
 
 jobs:
   # For this workflow, the following assumptions have been made and thus should be reality:
