--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # 4.1.0
         with:
+          persist-credentials: false
           # SonarQube - Shallow clones should be disabled for a better relevancy of analysis
           fetch-depth: 0
 
