chore: minor adjustments

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,9 @@
-# EditorConfig: https://editorconfig.org
+# EditorConfig: https://editorconfig.org/
 
+# Top-most EditorConfig file
 root = true
 
+# Unix-style newlines with a newline ending every file
 [*]
 charset = utf-8
 end_of_line = lf
@@ -10,9 +12,5 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{md, properties}]
-trim_trailing_whitespace = false
-
-[*.conf]
-indent_size = 4
+[*.{diff,md,properties,conf}]
 trim_trailing_whitespace = false
