--- a/src/bukkit/bukkit-plugin/pom.xml
+++ b/src/bukkit/bukkit-plugin/pom.xml
@@ -243,18 +243,24 @@
             </relocation>
           </relocations>
           <transformers>
-            <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+            <transformer
+              implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
               <resource>META-INF/README.md</resource>
               <file>${main.basedir}/README.md</file>
             </transformer>
-            <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+            <transformer
+              implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
               <resource>META-INF/LICENSE.md</resource>
               <file>${main.basedir}/LICENSE.md</file>
             </transformer>
-            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-            <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
-            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer" />
-            <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
+            <transformer
+              implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+            <transformer
+              implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer"/>
+            <transformer
+              implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"/>
+            <transformer
+              implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
               <addHeader>true</addHeader>
             </transformer>
           </transformers>
@@ -292,17 +298,47 @@
             <option>-allowaccessmodification</option>
             <option>-dontnote</option>
             <option>-dontwarn</option>
-            <option>-keep,allowoptimization class !fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.** { *; }</option>
-            <option>-keep,allowoptimization class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.com.google.inject.** { *; }</option>
-            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.jee.jakarta.validation.** { *; }</option>
-            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.hibernate.validator.** { *; }</option>
-            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.slf4j.** { *; }</option>
-            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.com.djaytan.bukkit.slf4j.** { *; }</option>
-            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.flywaydb.** { *; }</option>
-            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.com.zaxxer.hikari.HikariDataSource { *; }</option>
-            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.aopalliance.intercept.MethodInterceptor { *; }</option>
-            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.spongepowered.configurate.ConfigurationNode { *; }</option>
-            <option>-keepattributes Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,*Annotation*,EnclosingMethod</option>
+            <option>-keep,allowoptimization class
+              !fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.** { *; }
+            </option>
+            <option>-keep,allowoptimization class
+              fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.com.google.inject.**
+              { *; }
+            </option>
+            <option>-keep class
+              fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.jee.jakarta.validation.**
+              { *; }
+            </option>
+            <option>-keep class
+              fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.hibernate.validator.**
+              { *; }
+            </option>
+            <option>-keep class
+              fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.slf4j.** { *; }
+            </option>
+            <option>-keep class
+              fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.com.djaytan.bukkit.slf4j.**
+              { *; }
+            </option>
+            <option>-keep class
+              fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.flywaydb.** { *;
+              }
+            </option>
+            <option>-keep class
+              fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.com.zaxxer.hikari.HikariDataSource
+              { *; }
+            </option>
+            <option>-keep class
+              fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.aopalliance.intercept.MethodInterceptor
+              { *; }
+            </option>
+            <option>-keep class
+              fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.spongepowered.configurate.ConfigurationNode
+              { *; }
+            </option>
+            <option>-keepattributes
+              Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,*Annotation*,EnclosingMethod
+            </option>
             <option>-optimizationpasses 3</option>
           </options>
           <!-- Obfuscation forbidden by SpigotMC and Hangar when publishing plugin there -->
