build: disable JavaDoc linter at Maven execution time

--- a/pom.xml
+++ b/pom.xml
@@ -614,7 +614,7 @@
         <configuration>
           <quiet>true</quiet>
           <additionalJOptions>
-            <additionalJOption>-Xdoclint:all,-html</additionalJOption>
+            <additionalJOption>-Xdoclint:none</additionalJOption>
           </additionalJOptions>
         </configuration>
         <executions>
