chore!: bump to Java 17 & drop support for Spigot v1.16 and below
Bumping to Java 17 and dropping support for old Spigot versions enable us to benefit from new languages features and bump some dependencies like JakartaEE and Guice. Furthermore Java 11 is now longer supported as observable here: https://endoflife.date/oracle-jdk.
Official publication from Oracle regarding Java releases support dates: https://www.oracle.com/java/technologies/java-se-support-roadmap.html

The decision to drop compatibility with old Spigot versions has been made according to metrics collected and managed by bstats: https://bstats.org/plugin/bukkit/JobsReborn-PatchPlaceBreak/16899
=> Only one server is impacted. No big impact, in fact, since they can continue to rely on an old plugin version. They will just have to bump the server version if they want to benefit from updates and new features.

BREAKING CHANGE: drop compatibility with old Minecraft versions

--- a/src/bukkit/pom.xml
+++ b/src/bukkit/pom.xml
@@ -55,8 +55,8 @@
       </dependency>
       <dependency>
         <groupId>com.github.seeseemelk</groupId>
-        <artifactId>MockBukkit-v1.13</artifactId>
-        <version>0.2.0</version>
+        <artifactId>MockBukkit-v1.17</artifactId>
+        <version>1.13.0</version>
       </dependency>
       <dependency>
         <groupId>org.bstats</groupId>
@@ -73,15 +73,9 @@
       <dependency>
         <groupId>org.spigotmc</groupId>
         <artifactId>spigot-api</artifactId>
-        <version>1.11.2-R0.1-SNAPSHOT</version>
-        <!-- The server must be a Spigot one or a derivative one (e.g. PaperMC, Purpur, ...) -->
+        <version>1.17.1-R0.1-SNAPSHOT</version>
+        <!-- The server must be a Spigot or a derivative one (e.g. PaperMC, Purpur, ...) -->
         <scope>provided</scope>
-        <exclusions>
-          <exclusion>
-            <groupId>*</groupId>
-            <artifactId>*</artifactId>
-          </exclusion>
-        </exclusions>
       </dependency>
     </dependencies>
   </dependencyManagement>
