--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
     <project.encoding>UTF-8</project.encoding>
     <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
     <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
-    <java.version>8</java.version>
+    <java.version>17</java.version>
 
     <!-- ==================== Sonar ==================== -->
     <!-- sonar.projectKey must be defined through CLI only -->
@@ -653,7 +653,7 @@
           <parallel>all</parallel>
           <useUnlimitedThreads>true</useUnlimitedThreads>
           <!--suppress UnresolvedMavenProperty - Defined at runtime by JaCoCo -->
-          <argLine>${surefire.jacoco.args}</argLine>
+          <argLine>-Xshare:off ${surefire.jacoco.args}</argLine>
           <includes>
             <include>**/*Test.java</include>
           </includes>
