--- a/src/patch-place-break/patch-place-break-core/pom.xml
+++ b/src/patch-place-break/patch-place-break-core/pom.xml
@@ -63,12 +63,12 @@
       <artifactId>patch-place-break-storage</artifactId>
     </dependency>
     <dependency>
-      <groupId>jakarta.validation</groupId>
-      <artifactId>jakarta.validation-api</artifactId>
+      <groupId>jakarta.inject</groupId>
+      <artifactId>jakarta.inject-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.inject</groupId>
-      <artifactId>javax.inject</artifactId>
+      <groupId>jakarta.validation</groupId>
+      <artifactId>jakarta.validation-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.flywaydb</groupId>
