--- a/src/patch-place-break/patch-place-break-storage/pom.xml
+++ b/src/patch-place-break/patch-place-break-storage/pom.xml
@@ -51,8 +51,8 @@
       <artifactId>patch-place-break-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.inject</groupId>
-      <artifactId>javax.inject</artifactId>
+      <groupId>jakarta.inject</groupId>
+      <artifactId>jakarta.inject-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
