--- a/src/patch-place-break/patch-place-break-config/src/test/resources/fr/djaytan/minecraft/jobsreborn/patchplacebreak/config/properties/ConnectionPoolPropertiesImplTest/whenSerializing_withDefaultValues.conf
+++ b/src/patch-place-break/patch-place-break-config/src/test/resources/fr/djaytan/minecraft/jobsreborn/patchplacebreak/config/properties/ConnectionPoolPropertiesImplTest/whenSerializing_withDefaultValues.conf
@@ -1,4 +1,4 @@
-# The connection timeout in milliseconds
+# The connection timeout (in milliseconds)
 # Corresponds to the maximum time the connection pool will wait to acquire a new connection
 # from the DBMS server
 # Not applicable for SQLite
