--- a/src/patch-place-break/patch-place-break-core/src/test/resources/fr/djaytan/minecraft/jobsreborn/patchplacebreak/api/MysqlPatchPlaceBreakApiIntegrationTest/mysql.conf
+++ b/src/patch-place-break/patch-place-break-core/src/test/resources/fr/djaytan/minecraft/jobsreborn/patchplacebreak/api/MysqlPatchPlaceBreakApiIntegrationTest/mysql.conf
@@ -12,7 +12,7 @@
 # This is reserved for advanced usage only
 # Change these settings only if you know what you are doing
 connectionPool {
-    # The connection timeout in milliseconds
+    # The connection timeout (in milliseconds)
     # Corresponds to the maximum time the connection pool will wait to acquire a new connection
     # from the DBMS server
     # Not applicable for SQLite
@@ -55,6 +55,6 @@ dbmsServer {
 table="patch_place_break_tag"
 # The type of datasource to use
 # Available types:
-# - SQLITE: use a local file as database (easy & fast setup)
-# - MYSQL: use a MySQL database server (better performances)
+# * SQLITE: use a local file as database (easy & fast setup)
+# * MYSQL: use a MySQL database server (better performances)
 type=MYSQL
